<resources>
    <string name="app_name">MotoCuy</string>
    <string name="IniciarSesion">Iniciar Sesion</string>
    <string name="Registro">Registrese</string>
    <string name="btnIniciarSesion">Iniciar Sesion</string>
    <string name="btnRegistro">Registrarse</string>
    <string name="btnSolicitar">Solicitar</string>
    <string name="btnVolver">Volver</string>
    <string name="btnSalir">Salir</string>
    <string name="google_maps_key">AIzaSyBsn5tmJK7W5juTqMhx0dQR_ibi9bHWcYY</string>
</resources>