<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IniciarSesion"
            android:textSize="24dp"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            />

        <ImageView
            android:id="@+id/Usuario"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@mipmap/logo_motocuy"
            android:layout_marginTop="50dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Correo"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Contraseña"
            app:endIconMode="password_toggle"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/IniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnIniciarSesion"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:onClick="irPrincipal"/>

        <Button
            android:id="@+id/Registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRegistro"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:onClick="irRegistrarse"/>

    </LinearLayout>
</LinearLayout>